finalisation de l'exo 3

--- a/10 mars/Exo 3/CSS/style.css
+++ b/10 mars/Exo 3/CSS/style.css
@@ -1,5 +1,6 @@
 /* Importer un fichier CSS */
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);
+@import url('https://fonts.googleapis.com/css?family=Cabin:400,600,700|Ultra');
 
 /*
 Style Reset
@@ -19,7 +20,7 @@ Style Reset
         font-size: 1.5rem; /* => 15 px */
 
         /* Changer la famille de caractères */
-        font-family: "Arial", sans-serif; 
+        font-family: 'Cabin', sans-serif;
     }
 
     /* Supprimer la décoration des balises a */
@@ -34,6 +35,13 @@ Style Reset
 
     section{
         padding: 6rem 0;
+    }
+
+    h1, h2, h3{
+        /* Changer la famille de caractères */
+        font-family:'Ultra', serif;
+        /* Changer la graisse car le navigateur met les titres en bold par défaut */
+        font-weight: 400;
     }
 
     h1{
@@ -77,7 +85,11 @@ Style Reset
 /* 
 Style largeur maximum
 */
-    nav ul, #portfolio, #aboutMe p, #contacts, footer section{
+    nav ul,
+    main section:first-child,
+    main section:nth-child(2) p,
+    main section:last-child,
+    footer section{
         /* Définir une largeur maximum */
         max-width: 95rem;
 
@@ -143,7 +155,8 @@ Style header
         position: relative;
     }
 
-    #firstNavLi{
+    /* Sélectionner le premier enfant */
+    nav li:first-child{
         /* Sortir la balise du flux pour la repositionner précisement */
         position: absolute;
 
@@ -163,12 +176,12 @@ Style header
 /*
 Style portfolio
 */
-    #portfolio{
+    main section:first-child{
         /* Centrer dans la largeur tous les éléments in-line */
         text-align: center;
     }
 
-    #portfolio article{
+    main section:first-child article{
         /* Ajouter une marge extérieure de 10px */
         margin: 1rem;
 
@@ -180,7 +193,7 @@ Style portfolio
         position: relative;
     }
 
-    #portfolio a{
+    main section:first-child a{
         font-size: 7rem;
         background: rgba(24, 188, 156, .9);
         color: white;
@@ -206,14 +219,15 @@ Style portfolio
     }
 
     /* Modifier l'opacité de la balise en hover */
-    #portfolio a:hover{
+    main section:first-child a:hover{
         opacity: 1;
     }
     
 /*
 Style About Me
 */
-    #aboutMe{
+    /* Sélectionner le N-ième (nth) enfant */
+    main section:nth-child(2){
         /* Modifier la couleur des textes */
         color: snow;
 
@@ -224,7 +238,7 @@ Style About Me
          text-align: center;
     }
 
-    #aboutMe p{
+    main section:nth-child(2) p{
         /* Afficher le texte sur deux colonnes */
         -webkit-column-count: 3; /* Chrome, Safari, Opera */
         -moz-column-count: 3; /* Firefox */
@@ -236,7 +250,7 @@ Style About Me
         margin-bottom: 4rem;
     }
 
-    #aboutMe a{
+    main section:nth-child(2) a{
         color: snow;
         border: .3rem solid snow;
         padding: 1rem 1.5rem;
