--- a/14 mars/CSS/style.css
+++ b/14 mars/CSS/style.css
@@ -1,4 +1,21 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700,900');
+
+/*
+Animation
+*/
+
+    @-webkit-keyframes pictoHeaderAnim{
+        0% { transform: translateY(0)}
+        50% { transform: translateY(1rem)}
+        100% { transform: translateY(0)}
+    }
+
+    @keyframes pictoHeaderAnim{
+        0% { transform: translateY(0)}
+        50% { transform: translateY(1rem)}
+        100% { transform: translateY(0)}
+    }
+
 /*
 Style Reset
 */
@@ -18,6 +35,7 @@ Style Reset
         font-size: 1.5rem; /* =>15px */
         font-family: 'Roboto', sans-serif;
         font-weight: 400;
+        text-align: center;
     }
 
     a{
@@ -25,7 +43,7 @@ Style Reset
         color: #349aa6;
     }
 
-    h1 span{
+    span{
         text-transform: lowercase;
     }
 
@@ -43,11 +61,31 @@ Style Reset
         display: block;
     }
 
+    h2, h3{
+        text-transform: uppercase;
+        font-weight: 400;
+        font-size: 2.2rem;
+    }
+
+    section{
+        padding: 4rem 2rem;
+    }
+
+    p{
+        padding: 4rem 0;
+    }
+
+    figure{
+        padding: 2rem 0;
+    }
+
+    img{
+        max-width: 100%;
+    }
 /*
 Style Header
 */
     header{
-        text-align: center;
         color: white;
 
         /* Configurer l'image de fond en parallaxe */
@@ -92,9 +130,148 @@ Style Header
 
         /* Créer un rond avec une balise carrée */
         border-radius: 50%;
+
+        /* Appliquer l'animation */
+        -webkit-animation-name: pictoHeaderAnim;        
+        animation-name: pictoHeaderAnim;
+
+        /* Définir la durée */
+        -webkit-animation-duration: 1s;
+        animation-duration: 1s;
+
+        /* Définir le nombre de boucles */
+        -webkit-animation-iteration-count: infinite;        
+        animation-iteration-count: infinite;
     }
 
     a img{
         padding-top: .8rem;
     }
+
+/*
+Style main
+*/
+
+    /*Call to action*/
+    .callToAction{
+        text-align: left;
+        color: white;
+        border: .1rem solid white;
+        display: inline-block;
+        padding: 1rem;
+        border-radius: .5rem;
+        margin-top: 2rem;
+    }
+
+    .callToAction.blue{
+        color: #349aa6;
+        border-color: #349aa6;
+    }
+
+    .callToAction:before{
+        /* Afficher une image dans le content */
+        content: url(../img/puce-bas-blanche.png);
+
+        display: block;
+        height: 3rem;
+        width: 3rem;
+
+        /* Habiller la balise */
+        float: left;
+        margin-right: 1.5rem;
+    }
+
+    .callToAction.blue:before{
+        content: url(../img/puce-droite-bleu.png);
+    }
+
+    .callToAction:after{
+        /* Annuler le flottement */
+        clear: both;
+    }
+
+    /* Programme / Réponses */
+    section:nth-child(2), 
+    section:nth-child(4){
+        color:white;
         
+        /* Effet parallaxe CSS */
+        background-image: url(../img/img-foule.jpg);
+        background-attachment: fixed;
+        background-position: center;
+    }
+
+    /* Solutions, Chiffres, Footer */
+    section:nth-child(3),section:nth-child(7), footer{
+        color: white;
+        background: #349aa6;
+    }
+
+    /* Inscrivez-vous */
+    [alt="Logo du salon des maires"]{
+        width:10rem;
+        margin-bottom: 2rem;
+    }
+
+    /* Vidéo */
+    section:nth-child(6){
+        background-color: #349aa6;
+        /* Bloquer les enfants dans le parent */
+        position: relative;
+
+        /* Masquer les fants qui dépassent du parent */
+        overflow: hidden;
+    }
+
+    video{
+        /* Placer la vidéo en fond d'écran */
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+    }
+
+    section:nth-child(6) article{
+        color: white;
+        background: rgba(0, 0, 0, .5);
+        padding: 4rem 2rem;
+
+        /* Faire passer la balise sur la première couche */
+        position: relative;
+        z-index: 1;
+    }
+
+    section:nth-child(6) h3{
+        font-weight:900;
+        font: 1.5rem;
+        margin-bottom: 2rem; 
+    }
+
+    section:nth-child(6) a{
+        color: white;
+    }
+
+    /* Chiffres */
+    section:nth-child(7) figure{
+        display: inline-block;
+        vertical-align: top;
+        width: 49%;
+    }
+
+    /* Présentation */
+    article + img{
+        width: 15rem;
+        margin-bottom: 4rem;
+    }
+
+    iframe{
+        border: none;
+        width: 100%;
+        min-height: 30rem;
+    }
+
+    /* Footer */
+    footer{
+        font-size: 1rem;
+        padding: 1rem;
+    }
