--- a/15 mars/Exo 1/CSS/style.css
+++ b/15 mars/Exo 1/CSS/style.css
@@ -1,6 +1,13 @@
 /* Importe une feuille de style */
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);
 
+*{
+    /* Inclure dans les largeurs le padding et le border
+    (n'intère pas le margin) */
+    -webkit-box-sizing: border-box;    
+    box-sizing: border-box;
+}
+
 body{
     text-align: center;
 }
@@ -74,6 +81,15 @@ Configurer les styles pour les écrans d'une taille minimale de 550px
     main{
         max-width: 950px;
         margin: auto;
+    }
+
+    header{
+        width: 950px;
+        margin: auto;
+        background: red;
+
+        padding: 20px;
+        border: 10px solid blue;
     }
 
 }
