--- a/Avril/6 avril/Exo 1/CSS/style.css
+++ b/Avril/6 avril/Exo 1/CSS/style.css
@@ -254,7 +254,7 @@ Style main
         }
 
         select{
-            margin: 3rem auto;
+            margin: 1rem auto 3rem auto;
         }
 
         textarea{
@@ -285,6 +285,8 @@ Style main
         label{
             padding: 0;
             font-weight: 700;
+
+            -webkit-transition: all .5s;            
             transition: all .5s;
         }
 
@@ -297,6 +299,19 @@ Style main
             top: -1.5rem;
             font-size: 1.2rem;
             color: grey;
+        }
+
+        form b {
+        font-size: .7em;
+        text-transform: uppercase;
+        color: red;
+
+        -webkit-transition: opacity .5s;
+        transition: opacity .5s;
+        }
+
+        .hideError b{
+            opacity: 0;
         }
 
 /*
