--- a/silex-blog/templates/admin/article/edit.html.twig
+++ b/silex-blog/templates/admin/article/edit.html.twig
@@ -7,8 +7,31 @@
     
     <form method="post">
         <div class="form-group">
-            <label>Title</label>
+            <label class="control-label">Titre</label>
             <input type="text" name="title" value="{{ article.title }}" class="form-control">
+        </div>
+        <div class="form-group">
+            <label class="control-label">Contenu</label>
+            <textarea name="content" class="form-control">{{ article.content }}
+            </textarea>
+        </div>
+        <div class="form-group">
+            <label class="control-label">Résumé</label>
+            <textarea name="short_content" class="form-control">{{ article.shortContent }}
+            </textarea>
+        </div>
+        <div class="form-group">
+            <label class="control-label">Rubrique</label>
+            <select name="category" class="form-control">
+                <option value="">Choisissez une rubrique</option>
+                {% for category in categories %}
+                    <option 
+                        value="{{ category.id }}"
+                        {% if category.id == article.categoryId %}selected{% endif %}>
+                        {{ category.name }}
+                    </option>
+                {% endfor %}
+            </select>
         </div>
         <button type="submit" class="btn btn-primary">
             Enregistrer
