--- a/silex-blog/templates/category.html.twig
+++ b/silex-blog/templates/category.html.twig
@@ -1,6 +1,7 @@
 {% extends "layout.html.twig" %}
 
 {% block content %}
-    <h2>Accueil</h2>
+    <h2>{{ category.name }}</h2>
     {% include 'article_list.html.twig' %}
 {% endblock %}
+
