--- a/silex-blog/templates/layout.html.twig
+++ b/silex-blog/templates/layout.html.twig
@@ -23,7 +23,9 @@
                 <a class="navbar-brand">Menu admin</a>
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="{{ path('admin_categories') }}">Rubriques</a>
+                        <a href="{{ path('admin_categories') }}">Rubriques</a>                      
+                    </li>
+                    <li>
                         <a href="{{ path('admin_articles') }}">Articles</a>
                     </li>
                 </ul>
@@ -32,6 +34,8 @@
         <nav class="navbar navbar-default">
             <div class="container">
                 <a class="navbar-brand" href="{{ path('homepage')}}">Blog</a>
+                {# on affiche le rendu de la route categories #}
+                {{ render(url('categories')) }}
             </div>
         </nav>
         <div class="container">
