--- a/silex-blog/templates/layout.html.twig
+++ b/silex-blog/templates/layout.html.twig
@@ -18,24 +18,49 @@
         
     </head>
     <body>
-        <nav class="navbar-inverse">
-            <div class="container">
-                <a class="navbar-brand">Menu admin</a>
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="{{ path('admin_categories') }}">Rubriques</a>                      
-                    </li>
-                    <li>
-                        <a href="{{ path('admin_articles') }}">Articles</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+        {% if user_manager.admin %}
+            <nav class="navbar-inverse">
+                <div class="container">
+                    <a class="navbar-brand">Menu admin</a>
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <a href="{{ path('admin_categories') }}">Rubriques</a>                      
+                        </li>
+                        <li>
+                            <a href="{{ path('admin_articles') }}">Articles</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        {% endif %}
         <nav class="navbar navbar-default">
             <div class="container">
                 <a class="navbar-brand" href="{{ path('homepage')}}">Blog</a>
                 {# on affiche le rendu de la route categories #}
                 {{ render(url('categories')) }}
+                <ul class="nav navbar-nav navbar-right">
+                    {# 
+                    Twig va chercher  soit :
+                        UserManager::getUserConnected()
+                        UserManager::isUserConnected()
+                        UserManager::hasUserConnected()
+                    #}
+                    {% if user_manager.userConnected %}
+                        <li>
+                            <a>{{ user_manager.username }}</a>
+                        </li>
+                        <li>
+                            <a href="{{ path('logout') }}">Déconnexion</a>
+                        </li>
+                    {% else %}
+                        <li>
+                            <a href="{{ path('register') }}">Créer un compte</a>
+                        </li>
+                        <li>
+                            <a href="{{ path('login') }}">Connexion</a>
+                        </li>
+                    {% endif %}
+                </ul>
             </div>
         </nav>
         <div class="container">
@@ -44,14 +69,14 @@
                     {% if label == 'error' %}
                         {% set label = 'danger' %}
                     {% endif %}
-                    <div class="alert alert-{{ label }}">{{ flash }}</div>
+                    <div class="alert alert-{{ label }}">{{ flash|raw }}</div>
                 {% endfor %}
             {% endfor %}
             {% block content %}{% endblock %}
         </div>
         {% block javascripts %}
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"</script>    
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>    
         {% endblock %}
     </body>
 </html>
